--- a/style.css
+++ b/style.css
@@ -12,8 +12,8 @@ body {
   font-family: 'Poppins', sans-serif;
   font-size: 16px;
   line-height: 1.5;
-  color: #333;
-  background-color: #f5f5f5;
+  color: #6067b6;
+  background-color: #64656530;
 }
 
 header {
@@ -24,18 +24,35 @@ header {
 }
 
 header h1 {
-  font-weight: 300;
-  margin-left: 10px;
+  font-weight: 500;
+  margin-left: 5px;
+  background-color: #fff9fa;
+  padding: 8px;
+  border-radius: 10px;
+  box-shadow: 4px 4px 0 #7d82b8;
+  pointer-events: none;
+  user-select: none;
 }
 
 .container {
-  max-width: 500px;
-  margin: 30px auto;
-  padding: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 25px;
+  background-color: #5c5d8d2e;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px #7d82b8;
 }
 
 .edit-mode {
-  color: #ccc;
+  color: #6067b6;
+}
+
+/*PlaceHolders*/
+.form-input::placeholder,
+.form-input-filter::placeholder {
+  color: #7a7ebf;
 }
 
 /* Form & Input */
@@ -44,41 +61,60 @@ header h1 {
   font-size: 18px;
   margin-bottom: 20px;
   padding: 10px;
-  border: 1px solid #ccc;
+  border: 1px solid white;
   border-radius: 5px;
-  outline: none;
+  outline: 3px;
+  outline-color: #5c5d8d2e;
+  outline-style: solid;
+  outline-offset: -4px;
+  background-color: #fff9fa;
+  color: #5159b2;
+}
+
+.filter {
+  display: flex;
+  align-items: center;
+  color: #7a7ebf;
 }
 
 .form-input-filter {
   margin-top: 20px;
   width: 100%;
   font-size: 18px;
+  color: #5159b2;
   margin-bottom: 20px;
   padding: 10px;
   border: none;
-  border-bottom: 1px solid #ccc;
+  border-bottom: 1px solid white;
   background: transparent;
   outline: none;
 }
 
 /* Buttons */
 .btn {
-  background-color: #333;
-  color: #fff;
+  background-color: #cbff8c;
+  color: #3b44af;
   border: none;
   border-radius: 5px;
   padding: 10px 20px;
   cursor: pointer;
+  outline: 1px;
+  outline-color: #5c5d8d2e;
+  outline-style: solid;
+  outline-offset: -4px;
+  box-shadow: 0 4px 8px #7d82b8;
 }
 
 .btn:hover {
-  background-color: #444;
+  background-color: #7d82b8;
+  color: #cbff8c;
+  border: 1px solid white;
 }
 
 .btn-link {
   font-size: 16px;
   background-color: transparent;
-  color: #333;
+  color: white;
   border: none;
   padding: 0;
   cursor: pointer;
@@ -88,16 +124,18 @@ header h1 {
   margin-top: 20px;
   width: 100%;
   font-size: 16px;
-  background-color: transparent;
-  color: #333;
+  background-color: red;
+  color: white;
   border: 1px solid #ccc;
   border-radius: 5px;
   padding: 10px 20px;
   cursor: pointer;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.7);
 }
 
 .btn-clear:hover {
-  background-color: #f1f1f1;
+  background-color: rgb(191, 0, 0);
+  border: 1px solid white;
 }
 
 .text-red {
@@ -116,15 +154,26 @@ header h1 {
   display: flex;
   justify-content: space-between;
   width: 45%;
-  border: 1px solid #ccc;
+  border: 1px solid white;
   border-radius: 5px;
   padding: 10px 15px;
   margin: 0 5px 20px;
   font-weight: 700;
   cursor: pointer;
+  background-color: #fff9fa;
+  outline-color: #5c5d8d2e;
+  outline-style: solid;
+  outline-offset: -4px;
+  user-select: none;
 }
 
-@media (max-width: 500px) {
+.items li:hover {
+  background-color: #fbeff1;
+  color: #4750af;
+  border: 1px solid rgba(255, 0, 0, 0.354);
+}
+
+@media (max-width: 770px) {
   .items li {
     width: 100%;
   }
