--- a/style.css
+++ b/style.css
@@ -40,26 +40,27 @@ header h1 {
   left: 50%;
   transform: translate(-50%, -50%);
   padding: 25px;
-  background-color: #5c5d8d2e;
+  background-color: #5c5d8d;
   border-radius: 10px;
-  /* box-shadow: 0 4px 8px #7d82b8; */
   box-shadow: 5px 5px 3px 2px rgba(92, 40, 101, 0.3);
 }
 
 .edit-mode {
-  color: #6067b6;
+  color: white;
 }
 
 /*PlaceHolders*/
-.form-input::placeholder,
+.form-input::placeholder {
+  color: #5c5d8de1;
+}
 .form-input-filter::placeholder {
-  color: #7a7ebf;
+  color: #b8b9bf;
 }
 
 /* Form & Input */
 .form-input {
   width: 100%;
-  font-size: 18px;
+  font-size: 20px;
   margin-bottom: 20px;
   padding: 10px;
   border: 1px solid white;
@@ -69,21 +70,21 @@ header h1 {
   outline-style: solid;
   outline-offset: -4px;
   background-color: #fff9fa;
-  color: #5159b2;
-  box-shadow: 5px 5px 0px 1px rgba(92, 40, 101, 0.3);
+  color: white;
+  box-shadow: 5px 5px 0px 1px #7a7ebf;
 }
 
 .filter {
   display: flex;
   align-items: center;
-  color: #7a7ebf;
+  color: #b8b9bf;
 }
 
 .form-input-filter {
   margin-top: 20px;
   width: 100%;
-  font-size: 18px;
-  color: #5159b2;
+  font-size: 20px;
+  color: white;
   margin-bottom: 20px;
   padding: 10px;
   border: none;
@@ -104,16 +105,16 @@ header h1 {
   outline-color: #5c5d8d2e;
   outline-style: solid;
   outline-offset: -4px;
-  box-shadow: 0 4px 8px rgba(92, 40, 101, 0.3);
+  box-shadow: 0 4px 8px #7d82b8;
 }
 
 .btn:hover {
   background-color: #7d82b8;
   color: #cbff8c;
-  outline: 3px;
-  outline-color: #5c5d8d2e;
+  outline: 1.5px;
+  outline-color: white;
   outline-style: solid;
-  outline-offset: 4px;
+  outline-offset: 1px;
 }
 
 .btn-link {
@@ -129,18 +130,22 @@ header h1 {
   margin-top: 20px;
   width: 100%;
   font-size: 16px;
-  background-color: red;
+  background-color: rgb(191, 0, 0);
   color: white;
   border: 1px solid #ccc;
   border-radius: 5px;
   padding: 10px 20px;
   cursor: pointer;
-  box-shadow: 0px 4px 4px rgba(92, 40, 101, 0.3);
+  box-shadow: 0px 4px 4px #7d82b8;
 }
 
 .btn-clear:hover {
-  background-color: rgb(191, 0, 0);
-  border: 1px solid white;
+  background-color: red;
+  outline: 2px;
+  outline-color: white;
+  outline-style: solid;
+  outline-offset: 1px;
+  border: none;
 }
 
 .text-red {
@@ -170,8 +175,7 @@ header h1 {
   outline-style: solid;
   outline-offset: -4px;
   user-select: none;
-  box-shadow: 5px 2px 1px 1px rgba(92, 40, 101, 0.3);
-  /* box-shadow: -5px 2px 1px 1px rgba(92, 40, 101, 0.3); */
+  box-shadow: 5px 2px 1px 1px #7d82b8;
 }
 
 .items li:hover {
